# venum

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: errors.rs  errors_result.rs  lib.rs  value.rs  value_conversions.rs  value_impl_from_t_for_value.rs  value_impl_from_value_type_for_value.rs  value_impl_try_from_value_for_t.rs  value_impl_try_from_value_ref_for_t.rs  value_type.rs  venum.rs  venum_conversions.rs
