[package]
name = "venum"
version = "0.1.0"
authors = ["Joerg Sischka <sischcode@gmx.net>"]
readme = "README.md"
keywords = ["venum", "rust", "enum", "dynamic typing", "serialization", "deserialization", "parsing"]
edition = "2021"
rust-version = "1.62"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
chrono = "0.4"
rust_decimal = "1.22"
strum_macros = "0.24"

# This is behind the (implicit) feature: "dep:serde"
serde = { version = "1.0", features = ["derive"], optional = true}

[features]
default = ["serde"]
serde = ["dep:serde", "chrono/serde"]