[package]
name = "venum"
version = "0.1.1"
description = "Venum is a small crate, that is essentially just one enum type that can be used for 'dynamic typing'. It's much like serde's Value enum for example, but with lots of functions to parse and convert between enum variants."
authors = ["Jörg Sischka <sischcode@gmx.net>"]
readme = "README.md"
repository = "https://github.com/sischcode/venum"
keywords = ["venum", "value", "value-type", "enum", "dynamic typing", "serialization", "deserialization", "parsing"]
categories = ["encoding", "parsing"]
license = "Apache-2.0"
# license-file = "LICENSE"
edition = "2021"
rust-version = "1.62"
include = ["/src", "README.md", "LICENSE"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
chrono = "0.4"
rust_decimal = "1.25"
strum_macros = "0.24"

# This is behind the (implicit) feature: "dep:serde"
serde = { version = "1.0", features = ["derive"], optional = true}

[features]
default = ["serde"]
serde = ["dep:serde", "chrono/serde"]
serde_decimal = ["serde", "rust_decimal/serde-with-float", "rust_decimal/serde-with-str", "rust_decimal/serde-with-arbitrary-precision"]